--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "bin": "bricolo",
     "require": {
-        "abollinger/helpers": "^1.2"
+        "abollinger/helpers": "^1.2",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
