--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,6 @@
     "require": {
         "abollinger/helpers": "^1.2",
         "vlucas/phpdotenv": "^5.6"
-    }
+    },
+    "version": "1.2.6"
 }
