--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     branches:
-      - main # Change this to your main branch name
+      - master # Change this to your main branch name
 
 jobs:
   release:
@@ -16,7 +16,7 @@ jobs:
     - name: Set up PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: 7.4 # Change this to your desired PHP version
+        php-version: 8.1 # Change this to your desired PHP version
 
     - name: Install Composer dependencies
       run: composer install --no-scripts
@@ -28,10 +28,7 @@ jobs:
       id: create_release
       uses: actions/create-release@v1
       with:
-        tag_name: ${{ steps.get_version.outputs.version }}
-        release_name: ${{ steps.get_version.outputs.version }}
+        tag_name: v${{ steps.create_release.outputs.version }}
+        release_name: v${{ steps.create_release.outputs.version }}
         draft: false
         prerelease: false
-
-    - name: Upload release assets
-      id: upload-release
