--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,3 +32,4 @@ jobs:
         release_name: v${{ steps.create_release.outputs.version }}
         draft: false
         prerelease: false
+        token: ${{ secrets.GITHUB_TOKEN }}
