--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,9 +27,10 @@ jobs:
     - name: Create GitHub release
       id: create_release
       uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: v${{ steps.create_release.outputs.version }}
         release_name: v${{ steps.create_release.outputs.version }}
         draft: false
         prerelease: false
-        token: ${{ secrets.GITHUB_TOKEN }}
