--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     branches:
-      - master # Change this to your main branch name
+      - master
 
 jobs:
   release:
@@ -16,7 +16,7 @@ jobs:
     - name: Set up PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: 8.1 # Change this to your desired PHP version
+        php-version: 8.1
 
     - name: Install Composer dependencies
       run: composer install --no-scripts
