--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,5 @@
         "abollinger/helpers": "^1.2",
         "vlucas/phpdotenv": "^5.6"
     },
-    "version": "1.2.8"
+    "version": "v1.3.0"
 }
