--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
     "require": {
         "abollinger/helpers": "^1.2",
         "vlucas/phpdotenv": "^5.6"
+    },
+    "scripts": {
+        "serve": "@php bricolo serve d=public"
     }
 }
